# hard_drive_failure_cleanup

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
hard_drive_failure_cleanup/: __init__.py  dataset.py  features.py  plots.py
hard_drive_failure_cleanup/modeling/: predict.py  train.py
notebooks/: data_corruption_test.py  hard_drive_failure_cleanup.ipynb
