[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hard_drive_failure_cleanup"
version = "0.0.1"
description = "Proyecto final para ingenier\u00eda de caracter\u00edsticas donde se usan distintos m\u00e9todos para mejorar los datos del dataset p\u00fablico de discos duros de BackBlaze"
authors = [
  { name = "I\u00f1aki Sebasti\u00e1n Orozco Garc\u00eda" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["hard_drive_failure_cleanup"]
force_sort_within_sections = true
